# syntect

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE.txt  Makefile  Readme.md  Workflow.md
.github/workflows/: CI.yml  Release.yml
assets/: default.themedump  default_metadata.packdump  default_newlines.packdump  default_nonewlines.packdump
benches/: highlighting.rs  load_and_highlight.rs  loading.rs  parallel_parsing.rs  parsing.rs
benches/highlight_utils/: mod.rs
benches/utils/: mod.rs
examples/: ansi-scope-renderer.rs  gendata.rs  indent_toy.rs  latex-demo.rs  line-highlight-demo.rs  parsyncat.rs  score_selector.rs  syncat.rs  synhtml-css-classes.rs  synhtml.rs  synlangs.rs  synstats.rs  syntest.rs
highlighting/: Cargo.toml
highlighting/src/: highlighter.rs  lib.rs  scope.rs  selector.rs  style.rs  theme.rs  theme_set.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg  travis-doc-upload.sh
src/: compiled.rs  dumps.rs  easy.rs  escape.rs  generator.rs  html.rs  io.rs  lib.rs  package_set.rs  parser.rs  renderer.rs  rendering.rs  scope.rs  syntax_definition.rs  syntax_tests.rs  theme_set.rs  util.rs  utils.rs  yaml_load.rs
src/highlighting/: Readme.md  highlighter.rs  mod.rs  selector.rs  settings.rs  style.rs  theme.rs  theme_load.rs  theme_set.rs
src/html/: mod.rs  renderer.rs
src/parsing/: metadata.rs  mod.rs  package_set.rs  parser.rs  regex.rs  scope.rs  syntax_definition.rs  syntax_set.rs  syntax_set_pool.rs  util.rs  yaml_load.rs
src/theme/: Readme.md  highlighter.rs  mod.rs  selector.rs  settings.rs  style.rs  theme.rs
testdata/: Testing.sublime-syntax  branch_test.sublime-syntax  clear_scopes_test.asa  embed_escape_test.sublime-syntax  highlight_test.erb  issue25.c  issue28.rs  issue30.tex  issue33.rs  known_syntest_failures.txt  known_syntest_failures_fancy.txt  parser.rs  parser_tests.sublime-syntax  test.mlir  test1.html  test2.html  test3.html  test4.html  test5.html  test_first_line.test  testing-syntax.testsyntax
testdata/Monokai/: Monokai.tmTheme  SOURCE
testdata/Sourcegraph/: Sourcegraph (light).tmTheme  Sourcegraph Solarized (light).tmTheme  Sourcegraph.tmTheme
testdata/TypeScript/: TypeScript.tmTheme  TypeScriptReact.tmTheme
testdata/Vala/: LICENSE  README.md  Vala.sublime-syntax
testdata/Visual Studio/: SOURCE  Visual Studio.tmTheme
testdata/Visual Studio Dark/: SOURCE  Visual Studio Dark.tmTheme
testdata/issue20/: core_unix.ml
testdata/minimized_tests/: syntax_test_aspmini.asa  syntax_test_aspmini.asp  syntax_test_scalamini.scala
tests/: error_handling.rs  public-api.txt  public_api.rs
tests/snapshots/: public-api.txt  public_api__public_api.snap
