[package]
name = "syntect"
description = "library for high quality syntax highlighting and code intelligence using Sublime Text's grammars"
documentation = "https://docs.rs/syntect"
repository = "https://github.com/trishume/syntect"
keywords = ["syntax", "highlighting", "highlighter", "colouring", "parsing"]
categories = ["parser-implementations", "parsing", "text-processing"]
readme = "Readme.md"
license = "MIT"
# remember to update html_root_url when updating the version
version = "5.3.0"                                                   # remember to update html_root_url
authors = ["Tristan Hume <tristan@thume.ca>"]
edition = "2021"
exclude = ["testdata/*", "/scripts/*", "/Makefile", "/codecov.yml"]

[package.metadata.docs.rs]
# Toggle on extra features that aren't on by default
features = ["metadata"]

[dependencies]
yaml-rust2 = { version = "0.11.0", optional = true, default-features = false }
onig = { version = "6.5.1", optional = true, default-features = false }
fancy-regex = { version = "0.17.0", optional = true }
walkdir = "2.5"
regex-syntax = { version = "0.8", optional = true }
plist = { version = "1.8", optional = true }
bincode = { version = "1.3", optional = true }
flate2 = { version = "1.1", optional = true }
fnv = { version = "1.0", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", optional = true }
once_cell = "1.21"
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rayon = "1.11.0"
regex = "1.12"
getopts = "0.2"
pretty_assertions = "0.6"
rustup-toolchain = "0.1.10"
rustdoc-json = "0.9.8"
public-api = "0.50.3"
serde_json = "1.0"

[features]

# Dump loading using flate2
dump-load = ["dep:flate2", "dep:bincode"]
# Dump creation using flate2
dump-create = ["dep:flate2", "dep:bincode"]

regex-fancy = ["dep:fancy-regex"]
regex-onig = ["dep:onig"]

parsing = ["dep:regex-syntax", "dep:fnv", "dump-create", "dump-load"]

# Support for .tmPreferenes metadata files (indentation, comment syntax, etc)
metadata = ["parsing", "plist-load", "dep:serde_json"]

# Enables inclusion of the default syntax packages.
default-syntaxes = ["parsing", "dump-load"]
# Enables inclusion of the default theme packages.
default-themes = ["dump-load"]

html = ["parsing"]
# Support for parsing .tmTheme files and .tmPreferences files
plist-load = ["dep:plist", "dep:serde_json"]
# Support for parsing .sublime-syntax files
yaml-load = ["dep:yaml-rust2", "parsing"]

default-onig = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "html",
    "plist-load",
    "yaml-load",
    "dump-load",
    "dump-create",
    "regex-onig",
]
# In order to switch to the fancy-regex engine, disable default features then add the default-fancy feature
default-fancy = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "html",
    "plist-load",
    "yaml-load",
    "dump-load",
    "dump-create",
    "regex-fancy",
]
default = ["default-onig"]

# [profile.release]
# debug = true

[profile.dev.package]
aho-corasick.opt-level = 2
fancy-regex.opt-level = 2
regex-automata.opt-level = 2
regex-syntax.opt-level = 2

[lib]
bench = false

[[bench]]
name = "highlighting"
harness = false

[[bench]]
name = "load_and_highlight"
harness = false

[[bench]]
name = "loading"
harness = false

[[bench]]
name = "parsing"
harness = false
